first i made the components, after that i added styles on css and a bit of bootstrap and finally i managed to create the functions on javascript

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,6 @@
-
+body{
+    background-image: url(https://img.freepik.com/vector-premium/encrucijada-ciudad-dibujos-animados-coches-atasco-trafico-acera-cruce-peatones-paisaje-urbano-ilustracion-vectorial_53562-6512.jpg?w=2000);
+}
 /* 
 
     You can write your own styles here...
